Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Test_Settings__c/Account_Team_Audit_Trail_Test_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting for account team audit trail test class. Currently being used to store role literals.</description>
    <label>Account Team Audit Trail Test Settings</label>
</CustomObject>