Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Test_Settings__c/fields/Test_Role_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Test_Role_Account_Manager__c</fullName>
    <label>Test Role Account Manager</label>
    <length>30</length>
    <type>Text</type>
</CustomField>